# Decode_PUCCH

./: CMakeLists.txt  README.md
include/: channel.h  decoder.h  encoder.h  matrix.h  utils.h
src/: channel.cpp  decoder.cpp  encoder.cpp  main.cpp  matrix.cpp  utils.cpp
visual/: plot_ber.py
